--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -70,7 +70,7 @@
 
     - name: Creating Prometheus Config
       copy:
-        dest: "/etc/systemd/system/node-exporter.service"
+        dest: "/etc/prometheus/prometheus.yml"
         content: |
           global:
             scrape_interval: 15s
@@ -79,12 +79,10 @@
           scrape_configs:
             - job_name: "prometheus"
               static_configs:
-                - targets: ["demo-server-1:9090"]
+                - targets: ["localhost:9090"]
             - job_name: "node-exporter"
               static_configs:
-                - targets: ["demo-server-1:9100"]
-                - targets: ["demo-server-2:9100"]
-                - targets: ["demo-server-3:9100"]
+                - targets: ["localhost:9090"]
     
     - name: Creating Prometheus Service Daemon
       copy:
